...

    LaunchedEffect(baseValue) {
        if (baseValue != null) {
            viewModel.setBaseValue(baseValue)
        }
    }
    BigModalLayout(open = open, close = onClose, height = 0.95f, testTag = "addOrEditPropertyModal") {
        if (isLoading.value) {
            InternalLoading()
        } else {
            Column(
                modifier = Modifier
                    .fillMaxWidth()
                    .fillMaxHeight(0.95f)
                    .verticalScroll(rememberScrollState())
                    .testTag("addOrEditScrollContainer")
            ) {
                Row(
                    modifier = Modifier
                        .fillMaxWidth()
                        .padding(3.dp)
                        .drawBehind {
...
                        value = form.value.name,
                        onValueChange = { value -> viewModel.setName(value) },
                        label = "${stringResource(R.string.name)}*",
                        modifier = Modifier
                            .fillMaxWidth()
                            .padding(top = 10.dp)
                            .testTag("addOrEditName")
                    )
                    OutlinedTextField(
                        value = form.value.address,
                        onValueChange = { value -> viewModel.setAddress(value) },
                        label = "${stringResource(R.string.address)}*",
                        modifier = Modifier
                            .fillMaxWidth()
                            .padding(top = 10.dp)
                            .testTag("addOrEditAddress")

                    )
                    OutlinedTextField(
                        value = form.value.apartment_number,
                        onValueChange = { value -> viewModel.setAppartementNumber(value) },
                        label = "${stringResource(R.string.appartment_number)}*",
                        modifier = Modifier
                            .fillMaxWidth()
                            .padding(top = 10.dp)
                            .testTag("addOrEditNumber")
                    )
                    OutlinedTextField(
                        value = form.value.city,
                        onValueChange = { value -> viewModel.setCity(value) },
                        label = "${stringResource(R.string.city)}*",
                        modifier = Modifier
                            .fillMaxWidth()
                            .padding(top = 10.dp)
                            .testTag("addOrEditCity")
                    )
                    OutlinedTextField(
                        value = form.value.postal_code,
                        keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number),
                        onValueChange =
                        { value ->
                            viewModel.setZipCode(value)
                        },
                        label = "${stringResource(R.string.zip_code)}*",
                        modifier = Modifier
                            .fillMaxWidth()
                            .padding(top = 10.dp)
                            .testTag("addOrEditPostalCode")
                    )
                    OutlinedTextField(
                        value = form.value.country,
                        onValueChange = { value -> viewModel.setCountry(value) },
                        label = "${stringResource(R.string.country)}*",
                        modifier = Modifier
                            .fillMaxWidth()
                            .padding(top = 10.dp)
                            .testTag("addOrEditCountry")
                    )
                    OutlinedTextField(
                        value = form.value.area_sqm.toString(),
                        keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number),
                        onValueChange =
                        { value ->
...
                            }
                        },
                        label = "${stringResource(R.string.area)}*",
                        modifier = Modifier
                            .fillMaxWidth()
                            .padding(top = 10.dp)
                            .testTag("addOrEditArea")
                    )
                    OutlinedTextField(
                        value = form.value.rental_price_per_month.toString(),
                        keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number),
                        onValueChange =
                        { value ->
...
                            }
                        },
                        label = "${stringResource(R.string.rental)}*",
                        modifier = Modifier
                            .fillMaxWidth()
                            .padding(top = 10.dp)
                            .testTag("addOrEditRental")
                    )
                    OutlinedTextField(
                        value = form.value.deposit_price.toString(),
                        keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number),
                        onValueChange =
                        { value ->
...
                            }
                        },
                        label = "${stringResource(R.string.deposit)}*",
                        modifier = Modifier
                            .fillMaxWidth()
                            .padding(top = 10.dp)
                            .testTag("addOrEditDeposit")
                    )


                    Button(
                        onClick =
                        {
...
                        },
                        colors = ButtonDefaults.buttonColors(containerColor = androidx.compose.material3.MaterialTheme.colorScheme.secondary),
                        modifier = Modifier
                            .fillMaxWidth()
                            .padding(top = 10.dp)
                            .clip(RectangleShape)
                            .testTag("addOrEditSubmit")
                    ) {
                        submitButtonIcon()
                        Text(submitButtonText)
                    }

                }
...
