...
    <string name="login_error">Email or password incorrect</string>
    <string name="overview">Overview</string>
    <string name="RealProperty">Properties</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="register_password_error">The password must be at least 8 characters long</string>
    <string name="busy">Busy</string>
    <string name="available">Available</string>
    <string name="add_prop">Add a property</string>
    <string name="back">Back</string>
    <string name="open_in_messages">Open in messages</string>
    <string name="about_the_property">About the property</string>
    <string name="documents">Documents</string>
    <string name="start_inventory">Start an inventory</string>
    <string name="area">Area</string>
    <string name="tenant">Tenant</string>
    <string name="dates">Dates</string>
    <string name="rentMonth">Rent</string>
    <string name="rentPerMonth">Rent / Month</string>
    <string name="create_new_property">Create a new property</string>
    <string name="fill_property_infos">Please, fill your property informations</string>
    <string name="address_placeholder">Please, enter your property address</string>
    <string name="zip_placeholder">Please, enter your property zip code</string>
    <string name="country_placeholder">Please, enter your property country</string>
    <string name="area_placeholder">Please, enter your property area size, in m²</string>
    <string name="rental_placeholder">Please, enter your property rental per month</string>
    <string name="deposit_placeholder">Please, enter your property deposit</string>
    <string name="picture">Picture</string>
    <string name="address">Address</string>
    <string name="zip_code">Zip code</string>
    <string name="country">Country</string>
    <string name="deposit">Deposit</string>
    <string name="rental">Rental</string>
    <string name="add_picture">Add a picture</string>
    <string name="city">City</string>
    <string name="name">Name</string>
    <string name="inventory_title">Inventory</string>
    <string name="entry_inventory">Entry inventory</string>
...
    <string name="understand">Understand</string>
    <string name="cannot_make_exit_inventory">You cannot make an exit inventory</string>
    <string name="cannot_exit_inventory_text">You need to create at least on entry inventory before creating an exit inventory. The exit inventory will be based on the entry inventory.</string>
    <string name="sure_to_delete">Are you sure to delete </string>
    <string name="delete">Delete</string>
    <string name="basic_error">An error occured, please retry later</string>
    <string name="pending">Pending</string>
    <string name="property">Property</string>
    <string name="edit_property">Edit property</string>
    <string name="save">Save modifications</string>
    <string name="invite_tenant">Invite tenant</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
...
    <string name="error_get_last_inventory_report">Impossible to get the last inventory report, impossible to make an exit inventory report, please retry later</string>
    <string name="error_get_all_rooms">Error during the room recuperation process, please retry later</string>
    <string name="send_invitation">Send invitation</string>
    <string name="appartment_number">Appartement number</string>
    <string name="ai_call_error">There was on error on the ai call, please retry later</string>
    <string name="not_end_date_before_start">The end date cannot be before the starting date</string>
    <string name="about">About</string>
    <string name="email">Email</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="damages">Damages</string>
    <string name="user_infos">User\'s informations</string>
    <string name="add_tenant">Add a tenant</string>
    <string name="end_lease">End the lease</string>
    <string name="cancel_invitation">Cancel the invitation</string>
    <string name="mod_property">Modify the property</string>
    <string name="delete_property">Delete the property</string>
...
