...
                        BackButton { getBack(property.value) }
                    }
                    Box {
                        IconButton(
                            onClick = { expanded = true },
                            colors = IconButtonDefaults.iconButtonColors(containerColor = MaterialTheme.colorScheme.background),
                            modifier = Modifier.testTag("moreVertOptions"),
                        ) {
                            Icon(
                                Icons.Outlined.MoreVert,
                                contentDescription = "More options",
                                tint = MaterialTheme.colorScheme.onBackground
                            )
...
                        ) {
                            RealPropertyDropDownMenuItem(
                                name = stringResource(R.string.add_tenant),
                                onClick = openAddTenant,
                                disabled = openAddTenant == null,
                                closeDropDown = { expanded = false },
                                testTag = "inviteTenantBtn"
                            )
                            RealPropertyDropDownMenuItem(
                                name = stringResource(R.string.end_lease),
                                onClick = endLease,
                                disabled = endLease == null,
                                color = MaterialTheme.colorScheme.error,
                                closeDropDown = { expanded = false },
                                testTag = "endLeaseBtn"
                            )
                            RealPropertyDropDownMenuItem(
                                name = stringResource(R.string.cancel_invitation),
                                onClick = cancelInvitation,
                                disabled = cancelInvitation == null,
                                closeDropDown = {
                                    expanded = false
                                },
                                testTag = "cancelInvitationBtn"
                            )
                            RealPropertyDropDownMenuItem(
                                name = stringResource(R.string.mod_property),
                                onClick = openEdit,
                                closeDropDown = { expanded = false },
                                testTag = "editPropertyBtn"
                            )
                            RealPropertyDropDownMenuItem(
                                name = stringResource(R.string.delete_property),
                                onClick = openDelete,
                                color = MaterialTheme.colorScheme.error,
                                closeDropDown = { expanded = false },
                                testTag = "deletePropertyBtn"
                            )
                        }
                    }
                }
            }
        }
...

    if (isLoading.value) {
        InternalLoading()
        return
    }
    InitialFadeIn(300) {
        Column(modifier = Modifier.testTag("realPropertyDetailsScreen")) {
            if (deleteOpen) {
                DeletePopUpConfirmation(
                    delete = { deleteProperty(property.value.id) },
                    close = { deleteOpen = false },
                    globalName = stringResource(R.string.property),
                    detailedName = property.value.name
...
