...
                    PropertyStatus.available -> MaterialTheme.colorScheme.surfaceVariant
                    PropertyStatus.invite_sent -> MaterialTheme.colorScheme.inversePrimary
                    else -> MaterialTheme.colorScheme.error
                }
            )
            .padding(3.dp)
            .testTag("topRightPropertyBoxInfo")
    ) {
        Text(
            color = MaterialTheme.colorScheme.onError,
            text = when(status) {
                PropertyStatus.available -> stringResource(R.string.available)
                PropertyStatus.invite_sent -> stringResource(R.string.pending)
...
    }
    else if (onClick != null) {
       Modifier.clickable {  }
    } else {
        Modifier
    }
    Box(modifier = Modifier.testTag("propertyBoxRow")
            .padding(10.dp)
        .fillMaxWidth()
        .wrapContentHeight()

    ) {
        Column(
...
        else -> null
    }
    LaunchedEffect(Unit) {
        viewModel.getProperties()
    }

    DashBoardLayout(navController, "realPropertyScreen") {
        if (propertySelectedDetails.value == null) {
            ErrorAlert(null, null, errorAlertVal)
            DeletePopUp(
                open = deleteOpen != null,
                delete = { viewModel.deleteProperty(deleteOpen!!.first) },
                close = { deleteOpen = null },
                globalName = stringResource(R.string.property),
                detailedName = deleteOpen?.second?: ""
            )
            Box(modifier = Modifier.fillMaxSize()) {

                LazyColumn(modifier = Modifier.testTag("propertyBoxLazyColumn")) {
                    items(viewModel.properties) { item ->
                        InitialFadeIn {
                            PropertyBox(
                                item,
                                onClick = {
                                    if (deleteOpen == null) {
...
                Box(
                    modifier = Modifier.align(Alignment.BottomEnd)
                ) {
                    IconButton(
                        onClick = { addPropertyModalOpen = true },
                        colors = IconButtonDefaults.iconButtonColors(containerColor = MaterialTheme.colorScheme.secondary),
                        modifier = Modifier.testTag("addAPropertyBtn")
                    ) {
                        Icon(
                            Icons.Outlined.Add,
                            contentDescription = "add",
                            tint = MaterialTheme.colorScheme.onSecondary,
                            modifier = Modifier.size(45.dp)
...
